--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,9 @@ section,
 main, footer {
   display: block;
 }
+img {
+  display: block;
+}
 /* height 100% for full screen wrap background*/
 html, body {
   height: 100%;
@@ -13,10 +16,12 @@ html, body {
 body {
   margin: 0;
   font-family: 'Rubik', sans-serif;
+  font-weight: 300;
   color: #333;
 }
 h1 {
   font-family: 'Poiret One', cursive;
+  font-weight: 400;
 }
 h1, h2, h3 {
   margin: 0;
@@ -30,7 +35,6 @@ ul {
   margin: 0;
   padding: 0;
 }
-
 #wrap {
   height: 100%;
   background: #f0f0f0 url(images/background.jpg) no-repeat 12% center;
@@ -110,6 +114,62 @@ header #nav {
   font-weight: 300;
   text-align: center;
 }
+#find-more:hover,
+#find-more:focus {
+  cursor: pointer;
+  box-shadow: 0 3px 13px rgba(0, 0, 0, 0.5);
+}
+.color-box {
+  padding: 50px 0;
+  text-align: center;
+  text-transform: uppercase;
+}
+#about-us .color-box,
+#our-works .color-box {
+  background-color: #9bd8d0;
+  color: #659690;
+}
+h2 {
+  font-size: 1.5em;
+  font-weight: 300;
+}
+.line {
+  margin: 5px auto;
+  width: 100px;
+  border-bottom: 2px solid #000;
+}
+#about-us .line,
+#our-works .line {
+  border-color: #659690;
+}
+.text-box {
+  padding: 50px;
+  font-size: 1.125em;
+  background-color: #fff;
+}
+#services .color-box,
+#contacts .color-box {
+  background-color: #f4c356;
+  color: #cb9d36;
+}
+#services .line,
+#contacts .line {
+  border-color: #cb9d36;
+}
+#services img,
+#contacts img {
+  width: 100%;
+}
+#our-works a {
+  color: #659690;
+  font-size: 1.125em;
+}
+#our-works .color-box.links {
+  padding: 0 0 50px 0;
+}
+#contacts li:last-of-type {
+  margin-top: 50px;
+}
 
 
 @media screen and (min-width: 768px) {
@@ -119,14 +179,49 @@ header #nav {
     display: table;
     clear: both;
   }
-  /*2 responsive columns*/
-  .col-2 {
+  .col-12 {
+    width: 100%;
+  }
+  .col-11 {
+    width: 91.66666667%;
+  }
+  .col-10 {
+    width: 83.33333333%;
+  }
+  .col-9 {
+    width: 75%;
+  }
+  .col-8 {
+    width: 66.66666667%;
+  }
+  .col-7 {
+    width: 58.33333333%;
+  }
+  .col-6 {
     width: 50%;
+  }
+  .col-5 {
+    width: 41.66666667%;
+  }
+  .col-4 {
+    width: 33.33333333%;
+  }
+  .col-3 {
+    width: 25%;
+  }
+  .col-2 {
+    width: 16.66666667%;
+  }
+  .col-1 {
+    width: 8.33333333%;
+  }
+  .col-1, .col-2, .col-3, .col-4,
+  .col-5, .col-6, .col-7, .col-8,
+  .col-9, .col-10, .col-11, .col-12 {
     float: left;
   }
-  /*3 responsive columns*/
-  .col-3 {
-    width: 33.33%;
-    float: left;
+  #services {
+    background: #f0f0f0 url(images/laptops-bg.jpg) no-repeat center;
+    background-size: cover;
   }
 }
