menu transitions with js

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ html, body {
 body {
   margin: 0;
   font-family: 'Rubik', sans-serif;
+  font-size: 100%;
   font-weight: 300;
   color: #333;
 }
@@ -28,7 +29,25 @@ h1, h2, h3 {
 }
 a {
   text-decoration: none;
-  transition: 0.3s;
+  transition: all 0.3s ease-in-out;
+}
+a.decorate {
+  /* position relative so pseudo-element :before can be absolute to it */
+  position: relative;
+}
+a.decorate::before {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  content: "";
+  display: block;
+  border-bottom: 2px solid #333;
+  width: 0%;
+  transition: width 0.3s ease-in-out;
+}
+a.decorate:hover::before,
+a.decorate:focus::before {
+    width: 100%;
 }
 ul {
   list-style-type: none;
@@ -40,8 +59,22 @@ ul {
   background: #f0f0f0 url(images/background.jpg) no-repeat 12% center;
   background-size: cover;
 }
-header #nav {
-  display: none;
+#nav {
+  position: fixed;
+  top: 15%;
+  right: 15%;
+  font-size: 2em;
+  font-weight: 700;
+  text-transform: uppercase;
+  opacity: 0;
+  z-index: 10;
+  transition: opacity 0.6s ease-in-out;
+}
+#nav li {
+  margin-bottom: 10px;
+}
+#nav a {
+  color: #cb9d36;
 }
 #menu {
   width: 50px;
@@ -164,8 +197,17 @@ h2 {
   color: #659690;
   font-size: 1.125em;
 }
+#our-works a.decorate::before {
+  border-bottom: 2px solid #659690;
+}
 #our-works .color-box.links {
   padding: 0 0 50px 0;
+}
+#contacts a {
+  color: #cb9d36;
+}
+#contacts a.decorate::before {
+  border-bottom: 2px solid #cb9d36;
 }
 #contacts li:last-of-type {
   margin-top: 50px;
@@ -174,7 +216,7 @@ h2 {
 /* layout is mobile first, so breakpoints goes after 768px */
 @media screen and (min-width: 768px) {
   /*clearfix*/
-  .row:after {
+  .row::after {
     content: "";
     display: table;
     clear: both;
@@ -222,18 +264,22 @@ h2 {
     float: left;
   }
   #menu {
-    width: 65px;
-    height: 65px;
+    width: 64px;
+    height: 64px;
     padding-top: 21px;
     position: fixed;
     right: 5%;
     top: 4%;
   }
   .menu-line {
-    width: 29px;
+    width: 30px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 9px;
+  }
+  .menu-line:nth-child(3).rotate {
+    -webkit-transform: translate3d(0, -12px, 0) rotate(-45deg);
+    transform: translate3d(0, -12px, 0) rotate(-45deg);
   }
   #home h1 {
     width: 500px;
@@ -312,6 +358,9 @@ h2 {
     background: #f0f0f0 url(images/headphones-bg.jpg) no-repeat center;
     background-size: cover;
   }
+  #contacts li {
+    font-size: 0.75em;
+  }
 }
 @media screen and (min-width: 1024px) {
   #home h1 {
@@ -339,6 +388,9 @@ h2 {
   #our-works .color-box.links {
     height: 195px;
     padding: 30px 0 0 40px;
+  }
+  #contacts li {
+    font-size: 1em;
   }
   #contacts li:last-of-type {
     margin-top: 100px;
